Various fixes and updates to 1.12.1